# timpl-gitops-demo

./: Cargo.toml  build.rs
charts/: update
clusters/dev/: resources.yaml
clusters/local/: resources.yaml
clusters/minimal/: resources.yaml
clusters/prod/: resources.yaml
clusters/test/: resources.yaml
src/: config.rs  lib.rs  main.rs
